<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PresentacioUI.view.LoginActivity">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="8dp"
        app:strokeColor="@color/black"
        app:strokeWidth="0dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--usuario gmail-->


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/back1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                app:strokeColor="#5E5C5C" />

            <TextView
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:text="@string/app_hello"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:text="@string/app_hello1"
                android:textColor="#8C8686" />

            <TextView
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:text="@string/app_infoacount"
                android:textSize="16sp" />
            <!--usuario gmail-->


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_user"
                    android:inputType="text"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!--contraseña-->

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_passw"
                    android:inputType="textPassword"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_propane_tank_24"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/app_login"
                android:textAlignment="center"
                android:textColor="#ECE1E1"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                app:backgroundTint="#5256A8"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_fire_truck_24"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/app_login_r"
                android:textAlignment="gravity"
                android:textColor="#ECE1E1"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                app:backgroundTint="#5256A8"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>




</LinearLayout>