<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PresentacioUI.view.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="8dp"
        app:strokeColor="@color/black"
        app:strokeWidth="0dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/Tjason"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableTop="@drawable/ic_baseline_propane_tank_24"
                android:gravity="center"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:text="@string/app_Title"
                android:textSize="24sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/imageView2"
                android:layout_marginTop="90dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="center"
                app:srcCompat="@drawable/imgtank" />

            <TextView
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:layout_marginTop="80dp"
                android:text="@string/app_well"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ButtonIni"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="5dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/app_session"
                android:textAlignment="center"
                android:textColor="#ECE1E1"
                android:textStyle="bold"
                app:backgroundTint="#5256A8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ButtonRe"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/app_register"
                android:textAlignment="gravity"
                android:textColor="#ECE1E1"
                android:textStyle="bold"
                app:backgroundTint="#5256A8" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</LinearLayout>