<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="screen"
    android:textAlignment="center"
    tools:context=".PresentacioUI.view.RegisterActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:strokeColor="@color/black"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--usuario gmail-->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/back2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                app:strokeColor="#5E5C5C" />


            <TextView
                android:id="@+id/prueba"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="1dp"
                android:minHeight="48dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:text="@string/app_register_as"
                android:textSize="16sp" />


            <!--usuario gmail-->


            <!--Nombre de usuario-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="5dp"
                    app:srcCompat="@drawable/ic_baseline_propane_tank_24" />

                <TextView
                    android:id="@+id/clientRegister"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:height="30dp"
                    android:background="#F3F3F6"
                    android:gravity="center"
                    android:text="@string/app_login"
                    android:textSize="17dp"
                    android:textStyle="bold">


                </TextView>
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@drawable/ic_baseline_departure_board_24" />
                <TextView
                    android:id="@+id/registerDriver"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:height="30dp"
                    android:background="#F3F3F6"
                    android:gravity="center"
                    android:text="@string/app_login_r"
                    android:textSize="17dp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/FullNameTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/FullName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/app_register_user"
                    android:inputType="text"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:textColorHint="#757575"
                    android:visibility="gone"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EmailTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EmailReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/app_user"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:textColorHint="#757575"
                    android:visibility="gone"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contactoTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtContacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/app_contact"
                    android:inputType="text"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:visibility="gone" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--contraseña-->


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PasswrTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:visibility="gone"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/PasswReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/app_passw"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:visibility="gone" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--confirmar contraseña-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ConfirmPasswrTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:visibility="gone"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/PasswRregConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="Confirmar Contraseña"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:visibility="gone" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Marca-->
            <TextView
                android:id="@+id/txtdatsCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:text="@string/app_driver"
                android:textSize="16sp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/marcaTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtMarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/app_brand"
                    android:inputType="text"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:visibility="gone" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Placa-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/placaTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPlaca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/app_Plate"
                    android:inputType="text"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:visibility="gone" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/Progres"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/app_Signup"
                android:textAlignment="gravity"
                android:textColor="#ECE1E1"

                android:textStyle="bold"
                app:backgroundTint="#5256A8"

                />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</LinearLayout>